sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:14: error: '(' expected but identifier found.
        if rg>0
           ^